--- a/tp-integrador/style.css
+++ b/tp-integrador/style.css
@@ -64,6 +64,11 @@ header{
     font-size: 20px;
 }
 
+#btnBorrar, #btnResumen {
+    background-color: var(--btnenviar);
+    color: var(--blanco);
+}
+
 footer{
     background-color: var(--footer);
     height: 100px;
@@ -73,3 +78,6 @@ footer{
     color: var(--blanco);
 }
 
+.inactive{
+    display: none;
+}
